# Distributed-KV-Store

./: .gitignore  Cargo.toml  README.md  cluster.json  discover-cluster.ps1  start-cluster-node.ps1  start-node.bat
src/: client.rs  http_api.rs  lib.rs  main.rs  network.rs  persist.rs  storage.rs
src/dashboard/: README.md  index.html  package-lock.json  package.json
src/dashboard/src/: App.jsx  index.css
src/dashboard/src/components/: ClusterOverview.jsx  KeyValueBrowser.jsx  NodeCard.jsx  index.js
src/dashboard/src/services/: api.js
src/raft/: mod.rs  tests.rs
