[package]
name = "kvstore-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kv"
path = "src/main.rs"

[[bin]]
name = "kvc"
path = "src/bin/client.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
dashmap = "5.5"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"
futures = "0.3"
rand = "0.8"
